@@ -1,32 +1,0 @@
-# Change Log - Format to be decided
-# Dates are in GMT and in DD/MM/YY format
-
-NJ - 30/09/04 - Various work on core code.
-NJ - 01/10/04 - Added quite a few comments to the source code.
-NJ - 01/10/04 - Removed some old code + made the source format look prettier! (looks good on a 8-COL Tab Text Editor)
-NJ - 01/10/04 - Added more if's to check that we are not tring to access non existant data!
-NJ - 01/10/04 - Had some empty else's in the source, caused some runtime problems, fixed that.
-NJ - 01/10/04 - Add some Privledge checking because well truth be told AppleBoy was starting to semi-annoy me by using the !kick command when I didn't want him to.  Will be replaced by Pankey's system soon.
-NJ - 01/10/04 - Implementing Changelog and used SVN History to create past events.
-NJ - 01/10/04 - Starting a system like the Privledge system to join Multiple Channels.
-NJ - 01/10/04 - Channel System is done, needs lots of testing.  I think i'll leave programming at that for now.
-NJ - 01/10/04 - Added !join, no !part yet.
-NJ - 01/10/04 - Added privcheck call to: !topic, !quit and !cycle
-NJ - 01/10/04 - Made syntax errors have a bit of bold.
-NJ - 01/10/04 - Made !kick run as a multichannel system, e.g. !kick <channel> <nick> [messsage]
-BP - 02/10/04 - Made authorization more secure
-NJ - 02/10/04 - Added pankeys changelog entry for him
-NJ - 02/10/04 - Fixed Bug #2557 (IndexError: list index out of range - KICK)
-NJ - 02/10/04 - Importing Python module "fnmatch" - seems a nifty feature for wildcards etc
-NJ - 02/10/04 - Deleting masks_ircbp.py - the system has some flaws etc.
-NJ - 02/10/04 - Added new hostmask system, I KNOW ANOTHER ONE! - This one works a DREAM! - Uses fnmatch which I added to the imports, for a FS Matching checker it works SUPER well on plain text!
-NJ - 02/10/04 - Fixed bug #2556 (Comparing strings may fail because of case)
-NJ - 03/10/04 - Added more comments so that it's more spaced out where the !say commands are etc
-NJ - 03/10/04 - Started to implement the ability to have multiple prefixes, sadly i realised that my way of checking will cause problems.  The call for it has being commented out and put back to the original but it is something we should look at making better in the future.
-BP - 03/10/04 - Added a bash script to copy unix files to windows .txt format =)
-BP - 03/10/04 - Added !part command...realized this ChangeLog is backwards...should be top with newest changes
-NJ - 09/10/04 - Added the python interpreter line to top of ircbp.py
-NJ - 09/10/04 - Made the configuration stuff bit better to look at!
-NJ - 09/10/04 - Made some code more "tidy"
-NJ - 09/10/04 - RELEASE - 0.1.0
-NJ - 09/10/04 - Tag to /framework/tags/REL-0.1.0
